--- a/css/clean-blog.css
+++ b/css/clean-blog.css
@@ -4,6 +4,10 @@
  * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap-clean-blog/blob/master/LICENSE)
  */
 
+.img-computer {
+  width: 216px;
+}
+
 body {
   font-size: 20px;
   color: #212529;
